<resources>
    <string name="app_name" translatable="false">Football App</string>
    <string name="colon_separator" translatable="false">⦂</string>
    <string name="theme_key" translatable="false">themePref</string>
    <string name="author_name" translatable="false">Budi Ardianata</string>
    <string name="author_email" translatable="false">budiardianata@gmail.com</string>
    <string name="source_code" translatable="false">Source Code</string>
    <string name="not_found">Data Not Found</string>
    <string name="not_valid">%s is not valid Country</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_add">Add to Favorite</string>
    <string name="favorite_remove">Remove from Favorite</string>
    <string name="favorite_failed">Favorite Failed</string>
    <string name="search">Search</string>
    <string name="search_match_hint">Search Match Schedule</string>
    <string name="search_country_hint">Filter League by Country</string>
    <string name="next_match">Next Match</string>
    <string name="previous_match">Previous Match</string>
    <string name="language">Language</string>
    <string name="language_summary">Change Language</string>
    <string name="theme">Application Theme</string>
    <string name="theme_Select">Select Theme</string>
    <string name="about">About Me</string>
    <string name="league">League</string>
    <string name="match">Match</string>
    <string name="player_details">Player Details</string>
    <string name="goal_keeper">goal keeper</string>
    <string name="defender">defender</string>
    <string name="midfielder">MIDFIELDER</string>
    <string name="forwarder">Forwarder</string>
    <string name="match_details">Match Details</string>
    <string name="goal_detail">Goal Detail</string>
    <string name="substitution">substitution</string>
    <string-array name="themeListArray">
        <item>Light Theme</item>
        <item>Dark Theme</item>
        <item>Default By System</item>
    </string-array>

</resources>