<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/settings">
        <Preference
            android:icon="@drawable/ic_language"
            android:title="@string/language"
            android:summary="@string/language_summary">
            <intent android:action="android.settings.LOCALE_SETTINGS" />
        </Preference>

        <ListPreference
            android:icon="@drawable/ic_theme"
            app:key="@string/theme_key"
            app:title="@string/theme"
            app:defaultValue="default"
            app:dialogTitle="@string/theme_Select"
            app:entries="@array/themeListArray"
            app:entryValues="@array/themeEntryArray"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory app:title="Info">
        <Preference
            android:key="@string/about"
            android:icon="@drawable/ic_user"
            android:title="@string/about">
            <intent android:action="android.settings.LOCALE_SETTINGS" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>